2000-07-26  Andreas Jaeger  <aj@suse.de>

	* pthread.c: Initialize p_sem_avail.

2000-07-25  Ulrich Drepper  <drepper@redhat.com>

	* internals.h (struct __pthread_descr_struct): Add p_sem_avail.
	* semaphore.c: Handle spurious wakeups.

	* sysdeps/pthread/pthread.h: Add back PTHREAD_MUTX_FAST_NP as an alias
	for PTHREAD_MUTEX_ADAPTIVE_NP for source code compatibility.

	* pthread.c (__pthread_set_own_extricate): Use THREAD_GETMEM.
	(__pthread_wait_for_restart): Likewise.

	* condvar.c (pthread_cond_wait): Also check whether thread is
	cancelable before aborting loop.
	(pthread_cond_timedwait): Likewise.

	* signals.c (pthread_sighandler): Remove special code to restrore
	%gs on x86.
	(pthread_sighandler_t): Likewise.

2000-07-25  Mark Kettenis  <kettenis@gnu.org>

	* internals.h (__RES_PTHREAD_INTERNAL): Remove define.
	* pthread.c: Include <resolv.h>.
	(_res): Undefine.  Add extern declaration.

2000-07-24  Ulrich Drepper  <drepper@redhat.com>

	* pthread.c (__pthread_initial_thread): Update initializer.
	(__pthread_manager_thread): Likewise.
	(pthread_initialize): Move setrlimit call to...
	(__pthread_initialize_manager): ...here.
	(__pthread_reset_main_thread): Reset also soft limit on stack size.

	* condvar.c: Handle spurious wakeups.  [PR libc/1749].
	* internals.h (struct _pthread_descr_struct): Add p_condvar_avail.

2000-07-21  Ulrich Drepper  <drepper@redhat.com>

	* spinlock.h: If IMPLEMENT_TAS_WITH_CAS is defined use
	__compare_and_swap to define testandset.
	* linuxthreads/sysdeps/powerpc/pt-machine.h: Add volatile to asms.
	Define IMPLEMENT_TAS_WITH_CAS.

2000-07-20  Ulrich Drepper  <drepper@redhat.com>

	* Makefile: Pass -z nodelete to linker for libpthread.so
	generation if it understand this option.

2000-07-18  Mark Kettenis  <kettenis@gnu.org>

	* manager.c (pthread_handle_create): Remove initialization of
	new_thread->p_res._sock.

2000-07-19  Kaz Kylheku  <kaz@ashi.footprints.net>
